--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <p>
             <a href="img/img-1.jpg">
-                <img src="img/img-1.jpg" width="300"  alt="Джирибль">
+                <img src="https://img10.reactor.cc/pics/post/Ganyu-%28Genshin-Impact%29-Genshin-Impact-%D1%84%D1%8D%D0%BD%D0%B4%D0%BE%D0%BC%D1%8B-Keqing-%28Genshin-Impact%29-7455833.jpeg" width="300"  alt="Джирибль">
             </a>
             <img src="http://img2.joyreactor.cc/pics/post/%D0%9B%D0%B5%D0%B3%D0%B5%D0%BD%D0%B4%D1%8B-%D0%94%D0%B6%D0%BE%D1%8F-joyreactorcom-7180886.jpeg" width="300"  alt="">
         </p>
